<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hja.practica.ultima.pocketstove.VentanaPrincipal"
    tools:showIn="@layout/activity_ventana_principal"
    android:id="@+id/idVentanaPrincipal"
    >

    <EditText android:id="@+id/edit_message"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button"
        android:layout_x="0dp"
        android:layout_y="240dp" />

    <Button
    android:layout_width="107dp"
    android:layout_height="wrap_content"
    android:text="@string/button_send"
    android:onClick="parsear"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_x="200dp"
        android:layout_y="240dp" />

    <AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="497dp"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".MainActivity"
        android:id="@+id/AbsoluteLayout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/labelPosicion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Posición"
            android:layout_x="0dp"
            android:layout_y="120dp" />

        <Spinner
            android:id="@+id/comboPosicion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt_posicion"
            android:spinnerMode="dropdown"
            android:entries="@array/array_posiciones"
            android:layout_x="0dp"
            android:layout_y="140dp" />


        <TextView
            android:id="@+id/labelDecision"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Decisión"
            android:layout_x="0dp"
            android:layout_y="60dp" />

        <Spinner
            android:id="@+id/comboDecision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt_decision"
            android:spinnerMode="dropdown"
            android:entries="@array/array_decision"
            android:layout_x="0dp"
            android:layout_y="80dp" />

        <TextView
            android:id="@+id/labelTipo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="Ranking"
            android:layout_x="0dp"
            android:layout_y="0dp" />

        <Spinner
            android:id="@+id/comboTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/prompt_tipo"
            android:spinnerMode="dropdown"
            android:entries="@array/array_tipo"
            android:layout_x="0dp"
            android:layout_y="20dp" />

        <TextView
            android:id="@+id/labelMensajeEva"
            android:layout_width="148dp"
            android:layout_height="40dp"
            android:text="¿Bien?"
            android:layout_x="168dp"
            android:layout_y="414dp"
            android:layout_weight="0"
            android:textSize="20sp"
            android:textColor="#e41b1b" />

        <Button
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="Evaluar"
            android:onClick="recuperarEstados"
            android:nestedScrollingEnabled="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_x="195dp"
            android:layout_y="300dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:text="RST"
            android:id="@+id/buttonRST"
            android:layout_x="195dp"
            android:layout_y="353dp"
            android:onClick="Resetear"/>

    </AbsoluteLayout>

</AbsoluteLayout>

